Fixed contrast issues for Project 3

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/WoodPanel.jpg");
+    background-image: url("../images/WoodBackground.jpg");
 }
 
 nav {
